clusters/dev-cluster/ingress/ingress-dev-cluster.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-cluster-ingress
  namespace: default
  annotations:
    # TLS configuration:
    # traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    # traefik.ingress.kubernetes.io/router.tls: "true"

spec:
  rules:
  - host: "*"  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-server
            port:
              number: 80  
  # tls:
  # - hosts:
  #   - your-hostname.com  # Your hostname
  #   secretName: your-secret  # Your TLS Secret
